chai as sub rep
Signed-off-by: Pascal Pflaum <pascal@heutewirdnichtmehrgearbeitet.de>

--- a/test/makeTest.html
+++ b/test/makeTest.html
@@ -5,7 +5,7 @@
 		<title>Unit Tests</title>
 		<link rel="stylesheet" href="suite/mocha/mocha.css" />
 
-		<script type="text/javascript" src="suite/chai.js"></script>
+		<script type="text/javascript" src="suite/chai/chai.js"></script>
 		<script type="text/javascript" src="suite/mocha/mocha.js"></script>
 		<script type="text/javascript" src="suite/sinon-1.7.3.js"></script>
 		<script type="text/javascript" src="suite/sinon-chai.js"></script>
