renamed do to flow. runs are called with an object as first argument added sinon again, because i'm simply to lazy to compile it myself
Signed-off-by: Pascal Pflaum <pascal@heutewirdnichtmehrgearbeitet.de>

--- a/test/makeTest.html
+++ b/test/makeTest.html
@@ -7,7 +7,7 @@
 
 		<script type="text/javascript" src="suite/chai/chai.js"></script>
 		<script type="text/javascript" src="suite/mocha/mocha.js"></script>
-		<script type="text/javascript" src="suite/sinonJS/lib/sinon.js"></script>
+		<script type="text/javascript" src="suite/sinon-1.7.3.js"></script>
 		<script type="text/javascript" src="suite/sinon-chai/lib/sinon-chai.js"></script>
 
 		<script type="text/javascript" src="../index.js"></script>
