coverage running again

--- a/test/makeTest.html
+++ b/test/makeTest.html
@@ -10,7 +10,7 @@
 		<script type="text/javascript" src="suite/sinon-1.7.3.js"></script>
 		<script type="text/javascript" src="suite/sinon-chai/lib/sinon-chai.js"></script>
 
-		<script type="text/javascript" src="../index.js"></script>
+		<script type="text/javascript" src="../lib/functionFlow.js"></script>
 
 		<script>
 			mocha.checkLeaks().setup({
